demo/src/main/java/com/example/demo/errors/TratamientoException.java
package com.example.demo.errors;

public class TratamientoException extends RuntimeException {

    public TratamientoException(Long id) {
        super("Tratamiento no encontrado con id: " + id);
    }
}
